# MLCXLDB

./: .gitignore  CMakeLists.txt  README.md  explain_logic.sh  flamegraph_sample.sh  test_count_min_sketch.cpp
backend/: CMakeLists.txt
backend/leanstore/: Config.cpp  Config.hpp  LeanStore.cpp
backend/leanstore/concurrency-recovery/: CRMG.cpp  Worker.cpp
backend/leanstore/profiling/tables/: BMTable.cpp  BMTable.hpp  ConfigsTable.cpp
backend/leanstore/storage/bf-tree/: BFTreeAdmissionPolicy.hpp  BfTreeAdapter.hpp  CircularBuffer.hpp  MiniPage.hpp  WriteBackBatcher.hpp
backend/leanstore/storage/btree/: BTreeLL.cpp  BTreeVI.cpp  BTreeVI.hpp
backend/leanstore/storage/btree/core/: BTreeGeneric.cpp  BTreeNode.hpp
backend/leanstore/storage/buffer-manager/: BufferFrame.hpp  BufferManager.cpp  BufferManager.hpp  CXLPageProviderThread.cpp  DRAMPageProviderThread.cpp  DTRegistry.cpp  DTRegistry.hpp  PageProviderThread.cpp  Partition.hpp  TwoLevelAdmissionThread.cpp
backend/leanstore/storage/hybried-tier-asplos2025/: CountBloomFilter.hpp  FourGridDecision.hpp  HybridTierASPLOS2025AdmissionPolicy.hpp  MomentumSketch.hpp  SecondChanceTracker.hpp
backend/leanstore/storage/record-cache/: RecordCache.cpp  RecordCache.hpp  RecordCacheEntry.hpp  RecordCacheSlabAllocator.hpp
backend/leanstore/storage/record-cache/Forward_epoch/: EpochManager.hpp  ForwardEpochThread.cpp  InvalidationQueue.hpp
backend/leanstore/storage/record-cache/Promote/: PromoteThread.cpp
backend/leanstore/storage/record-cache/SIEVE_eviction/: SIEVEEvictionThread.cpp  SieveFIFO.hpp
backend/leanstore/storage/tiered-indexing-zxj/: DistributedCounter.hpp  OptimisticLockTable.hpp  TwoTreeAdapter.hpp
backend/leanstore/storage/two-level-admission-control/: CountMinSketch.hpp  DepulicateSetForPageSampling.hpp  SampledVisitHistogram.hpp  SkewRecordAdmission.cpp  SkewRecordAdmission.hpp  TwoLevelAdmissionControl.hpp  VisitCountBucket.hpp
backend/leanstore/utils/: ZipfGenerator.cpp
correctness-and-parameter-validation/Experiment1_pure_skew/: hit_ratio_vs_payload.cpp  payload_length_working_set.cpp  pure_record_cache_data_generator.cpp  test-cxl-lookup-pure-record-skew.cpp  test-cxl-lookup-pure-without-recordcache.cpp  working_set_sweep_hit_ratio.cpp
exp1_exp2_scripts/: 0518end_to_end_ReadOnly.sh  0518end_to_end_WriteThrough.sh
exp3_scripts/: exp3_ReadOnly_scalability.sh  exp3_WriteThrough_scalability.sh
exp4_exp6_scripts/: build_exp6.sh  exp4_parameter_sensitivity.sh  exp6_convergence_time.sh  run_exp4_then_exp6.sh
exp5_profile_scrips/: exp5_perf_profiling.sh
exp7_scripts/: exp7_comparison.sh  exp7_group1_BCD_tpcc.sh  exp7_group2_AEF.sh  run_exp7_then_exp5.sh
experiment_1_ycsb_full/: 0514experiment_formal.sh  0515ablation_run.sh  experiment1_ycsb_a.cpp  experiment1_ycsb_b.cpp  experiment1_ycsb_c.cpp  experiment1_ycsb_d.cpp  experiment1_ycsb_e.cpp  experiment1_ycsb_f.cpp  experiment_fixed_hotset.cpp  optimization_step1_in_memory_ycsb_bc.sh  optimization_step2_in_memory_ycsb_bc.sh  optimization_step2_large_in_memory_ycsb_bc.sh  perf_flamegraph.sh  perf_ycsbe.sh  profiling_script.sh  quick_ablation_two_level_all_wl.sh  quick_test_two_level.sh  run_ablation_ws10.sh  run_ablation_ws4.sh  run_ablation_ws8.sh  run_all_ycsb_experiments.sh  run_all_ycsb_experiments_fullly_warmup.sh  smoke_debug_epoch_window_v2.sh  smoke_debug_hit_drop.sh  smoke_debug_promote_threads.sh  smoke_fixed_hotset.sh  smoke_fixed_hotset_bc.sh  smoke_warmup_diag.sh  stress_test_cms_tuned_ycsb_bc.sh  stress_test_high_concurrency_ycsb_bc.sh  tpcc_compare_test.cpp  tune_skew_threshold.py  tune_ycsb_bc_two_level.py
experiment_1_ycsb_full/exper1_analysis_parameter/: extract_metrics.sh  run_parameter_sensitivity.sh
experiment_1_ycsb_full/optimization_step1/: analyze_bc.py
experiment_1_ycsb_full/optimization_step2/small_bc_two_level/: analyze_promote.py
experiment_1_ycsb_full/optimization_step5/: verify_aging_window.py  verify_cms_error.py  verify_promotion_trace.py
experiment_bf_3T_hybridtier/: build_asan.sh  gdb_n4_capture.sh  gdb_n4_v2.sh  quick_smoke_test.sh  rerun_ycsb_f_3T.sh  run_3t_repro.sh  run_all_baselines.sh  run_asan_d1.sh  run_bf_repro.sh  run_hybridtier_repro.sh  run_medium_benchmark.sh  run_medium_benchmark_ssd_involved.sh  run_retry_pending.sh  run_two_level_baseline.sh  run_two_level_baseline_v4.sh  smoke_n4_fix.sh
experiment_bf_3T_hybridtier/bench_20260525_233324/: plot_perf_compare.py
experiment_bf_3T_hybridtier/bench_20260526_150208/: plot_perf_compare.py
experiment_bf_3T_hybridtier/bench_20260527_135428/: plot_perf_compare.py
experiment_two_level_optimization/: build_microbench.sh  microbench_hot_path.cpp  profile_all_modes_full.sh  profile_all_modes_hotpath.sh  run_two_level_opt.sh
frontend/: CMakeLists.txt
frontend/mix/: bulk_loading.cpp
frontend/scaled-example/: main.cpp
frontend/shared/: BfTreeLeanStoreAdapter.hpp  LeanStoreAdapter.hpp  TwoTreeLeanStoreAdapter.hpp
frontend/tpc-c/: TPCCWorkload.hpp  tpcc.cpp
frontend/ycsb/: deterministic.cpp  ycsb.cpp
libs/: unordered_dense.cmake
record-cache-test-suit/: experiment_data_generator.cpp  experiment_zipfian_data_generator.cpp  test-cxl-lookup-integration.cpp  test-cxl-lookup-update-integration.cpp  test-cxl-update-integration.cpp  test-forward-epoch-thread.cpp  test-promote-real-thread.cpp  test-recordcache-slab-allocator-2.cpp  test-recordcache-slab-allocator.cpp  test-recordcache.cpp  test-simple-cleanup.cpp  test_sieve_eviction.cpp
two-level-admission-test-suit/: motivation_data_loading.cpp  test_depulicate_set_for_page_sampling.cpp  test_sampled_visit_histogram.cpp  test_two_level_admission_control.cpp  test_visit_count_bucket.cpp
ycsb_ablation_study/workload_c/: bypass_ssd.sh  pure_dram_bp_vs_pure_cxl_bp.sh  pure_memory_uniform.sh  start_ycsb_c_test.sh  ycsb_c_compatile_test.cpp  ycsb_c_test.cpp
